Fix paths and add go static fallback

--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
 </html>
 <body>
   <div class="topbar" style="display: flex">
@@ -21,7 +21,7 @@
         style="margin-left: 55%;margin-right: 5%">Log in</button>
     </div>
     <div class="logo" style="margin-top: 40px;">
-      <img id="logo_aruko" src="assets/aruko.png" alt="aruko">
+      <img id="logo_aruko" src="/static/assets/aruko.png" alt="aruko">
     </div>
   </div>
 
